@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix error handling in CLI mode, use STDERR and non-empty exit code (#1489043)
 - Fix error when using check_referer=true
 - Fix incorrect handling of some specific links (#1489060)
 - Fix incorrect handling of leading spaces in text wrapping
